# parallel_web_scraper

./: Cargo.toml  README.md  run5.txt
parallel/: Cargo.toml
parallel/src/: formatter.rs  main.rs  processor.rs  scraper.rs
parallel_scraper_front/: bun.lockb  package.json
parallel_scraper_front/src/pages/: index.vue
sequential/src/: formatter.rs  main.rs  processor.rs  scraper.rs
src/: formatter.rs  main.rs  processor.rs  scraper.rs
