[package]
name = "parallel_web_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.16"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"